--- a/index.html
+++ b/index.html
@@ -366,6 +366,8 @@
     </footer>
 
     <button id="scrollTopBtn" title="Retourner en haut de la page" aria-label="Retourner en haut">▲</button>
+    <!-- Ajouter juste avant </body> -->
+<script src="block-ads.js" data-auto-init></script>
 
     <script>
         const filmsData = [
@@ -508,9 +510,7 @@
         /* Hero background rotation */
         const heroSection = document.querySelector('.hero-section');
         const images = [
-            '8bf538cdbf6fa7219d54fdd201bb6bc7.jpg',
             '198b2f01e73b905772279616eccc7c65.jpg',
-            'aeeae5e4b2b342974ece1d7b4b27528a.jpg',
             'c0896a8f2e95a5b66a2a6a47ecc245dd.jpg'
         ];
         let currentImageIndex = 0;
