--- a/index.html
+++ b/index.html
@@ -409,6 +409,66 @@
                 iframeSrc: "https://uqload.cx/embed-02x9dwctp67m.html",
                 description: "Nathan, adolescent atteint du syndrome d'Asperger, découvre l'amitié et l'amour grâce à une enseignante qui l'encourage à sortir de sa coquille."
             },
+             {
+                title: "Social Network",
+                iframeSrc: "https://uqload.cx/embed-q4yvghue7qb2.html",
+                description: "Un soir d'hiver 2003, Mark Zuckerberg, étudiant à Harvard et expert en informatique, s'installe devant son ordinateur et se met à travailler avec frénésie sur une nouvelle idée, autour du développement de programme et de blogs. Ce qui prend forme dans cette chambre ce soir-là deviendra très vite un réseau communautaire à échelle mondiale et une révolution dans la communication. Seulement six années et quelques 500 millions d'amis plus tard, Mark Zuckerberg est devenu le plus jeune milliardaire de l'histoire… Cependant, pour cet entrepreneur, la réussite amène à la fois des complications personnelles et légales."
+            },
+            {
+                title: "Oppenheimer",
+                iframeSrc: "https://uqload.cx/embed-zk9j981n2jwj.html",
+                description: "L'histoire de J. Robert Oppenheimer, le physicien théoricien américain qui a dirigé le projet Manhattan, aboutissant au développement de la première bombe atomique pendant la Seconde Guerre mondiale."
+            },
+            {
+                title: "Rocketman",
+                iframeSrc: "https://uqload.cx/embed-2ob0h5bhp9y6.html",
+                description: "Rocketman nous raconte la vie hors du commun d’Elton John, depuis ses premiers succès jusqu’à sa consécration internationale. Le film retrace la métamorphose de Reginald Dwight, un jeune pianiste prodige timide, en une superstar mondiale. Il est aujourd’hui connu sous le nom d’Elton John. Son histoire inspirante - sur fond des plus belles chansons de la star – nous fait vivre l’incroyable succès d’un enfant d’une petite ville de province devenu icône de la pop culture mondiale."
+            },
+            {
+                title: "Bohemian Rhapsody",
+                iframeSrc: "https://uqload.cx/embed-xhqmuwx0imur.html",
+                description: "L'histoire de Freddie Mercury, le légendaire chanteur du groupe Queen, et de leur ascension vers la gloire mondiale, culminant avec leur performance emblématique au Live Aid en 1985."
+            },
+            {
+                title: "Lincoln",
+                iframeSrc: "https://uqload.cx/embed-6g3c68vpvkbf.html",
+                description: "En 1865, alors que la guerre de Sécession fait rage, le président Abraham Lincoln se bat pour faire adopter le treizième amendement, qui abolirait l'esclavage aux États-Unis."
+            },
+            {
+                title: "Yves Saint Laurent",
+                iframeSrc: "https://uqload.cx/embed-hqof0jgsgn1l.html",
+                description: "Paris, 1957. À tout juste 21 ans, Yves Saint Laurent est appelé à prendre en main les destinées de la prestigieuse maison de haute couture fondée par Christian Dior, récemment décédé. Lors de son premier défilé triomphal, il fait la connaissance de Pierre Bergé, rencontre qui va bouleverser sa vie. Amants et partenaires en affaires, les deux hommes s’associent trois ans plus tard pour créer la société Yves Saint Laurent. Malgré ses obsessions et ses démons intérieurs, Yves Saint Laurent s’apprête à révolutionner le monde de la mode avec son approche moderne et iconoclaste."
+            },
+            {
+                title: "Le loup de Wall Street",
+                iframeSrc: "https://uqload.cx/embed-74481937q0w5.html",
+                description: "Sa licence de courtier en poche, et les narines déjà pleines de cocaïne, Jordan Belfort est prêt à conquérir Wall Street. Ce jour d'octobre, un krach, le plus important depuis 1929, vient piétiner ses rêves de grandeur. C'est finalement à Long Island qu'il échoue et qu'il monte sa propre affaire de courtage. Son créneau : le hors-cote. Sa méthode : l'arnaque. Son équipe : des vendeurs ou des petits trafiquants."
+            },
+            {
+                title: "The big short",
+                iframeSrc: "https://uqload.cx/embed-x2dqmchmd7rj.html",
+                description: "En 2006-2007, plusieurs investisseurs prévoient l'effondrement du marché immobilier américain et décident de parier contre les prêts hypothécaires à risque, ce qui leur permet de réaliser d'énormes profits lorsque la crise financière éclate."
+            },
+            {
+                title: "The Founder",
+                iframeSrc: "https://uqload.cx/embed-h190ei6jfmml.html",
+                description: "L'histoire vraie de Ray Kroc, un vendeur de milkshakes qui découvre un petit restaurant de hamburgers en Californie et transforme l'entreprise familiale des frères McDonald en une franchise mondiale."
+            },
+            {
+                title: "Jobs",
+                iframeSrc: "https://uqload.cx/embed-8bkin8rcssql.html",
+                description: "L'histoire de Steve Jobs, depuis ses débuts dans un garage jusqu'à la création d'Apple Inc., en passant par son éviction de l'entreprise et son retour triomphal."
+            },
+            {
+                title: "Invictus",
+                iframeSrc: "https://uqload.cx/embed-al81ie77smx3.html",
+                description: "En 1994, l'élection de Nelson Mandela consacre la fin de l'Apartheid, mais l'Afrique du Sud reste une nation profondément divisée sur le plan racial et économique. Pour unifier le pays et donner à chaque citoyen un motif de fierté, Mandela mise sur le sport, et fait cause commune avec le capitaine de la modeste équipe de rugby sud-africaine. Leur pari: se présenter à la coupe du monde de rugby de 1995..."
+            },
+            {
+                title: "Le stratège",
+                iframeSrc: "https://uqload.cx/embed-2clcbcx92144.html",
+                description: "Voici l’histoire vraie de Billy Beane, un ancien joueur de baseball prometteur qui, à défaut d’avoir réussi sur le terrain, décida de tenter sa chance en dirigeant une équipe comme personne ne l’avait fait auparavant… Alors que la saison 2002 se profile, Billy Beane, le manager général des Oakland Athletics, est confronté à une situation difficile : sa petite équipe a encore perdu ses meilleurs joueurs, attirés par les grands clubs et leurs gros salaires. Bien décidé à gagner malgré tout, il cherche des solutions qui ne coûtent rien et auxquelles personne n’aurait pensé avant… Il va s’appuyer sur des théories statistiques et engager Peter Brand, un économiste amateur de chiffres issu de Yale. Ensemble, contre tous les principes, ils reconsidèrent la valeur de chaque joueur sur la base des statistiques et réunissent une brochette de laissés-pour-compte oubliés par l’establishment du baseball."
+            },
             {
                 title: "Le prodige des échecs",
                 iframeSrc: "https://uqload.cx/embed-5idrvyjzelvy.html",
@@ -530,8 +590,8 @@
         const quoteText = document.getElementById("quote-text");
         const quotes = [
             "Un film peut changer une journée. Une idée peut changer une vie.",
-            "La seule limite à notre réalisation de demain sera nos doutes d'aujourd'hui. – Franklin D. Roosevelt",
-            "La vie ne consiste pas à se trouver soi-même, mais à se créer soi-même. – George Bernard Shaw",
+            "La seule limite à notre réalisation de demain sera nos doutes d'aujourd'hui. – F.D. Roosevelt",
+            "La vie ne consiste pas à se trouver soi-même, mais à se créer soi-même. – G.B. Shaw",
             "Le voyage de mille lieues commence par un seul pas. – Lao Tseu",
             "La connaissance parle, mais la sagesse écoute. – Jimi Hendrix"
         ];
@@ -567,6 +627,214 @@
         displayFilms(1);
         setupPagination();
     </script>
+    
+
+    <!-- Début : Bannière AdBlock (affiche seulement si aucun bloqueur détecté, seulement sur la page d'accueil) -->
+<style>
+  /* Styles de la bannière - responsive */
+  #adblock-banner {
+    position: fixed;
+    left: 12px;
+    right: 12px;
+    max-width: 1200px;
+    margin: 12px auto;
+    background: rgba(26,26,26,0.98);
+    color: var(--color-yellow, #ffff00);
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    padding: 12px 14px;
+    z-index: 99999;
+    box-shadow: 0 6px 24px rgba(0,0,0,0.6);
+    border-radius: 8px;
+    display: none; /* affichage contrôlé par JS */
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  #adblock-banner .adblock-actions { display:flex; gap:10px; align-items:center; flex-wrap:wrap; justify-content:center; }
+
+  #adblock-banner a.adblock-cta {
+    display:inline-block;
+    padding:8px 14px;
+    background: var(--color-yellow, #ffff00);
+    color: var(--color-black, #000);
+    text-decoration:none;
+    border-radius:6px;
+    font-weight:700;
+    border:2px solid var(--color-yellow, #ffff00);
+  }
+
+  #adblock-banner button.adblock-close {
+    background: transparent;
+    color: var(--color-yellow, #ffff00);
+    border:1px solid var(--color-yellow, #ffff00);
+    padding:6px 10px;
+    border-radius:6px;
+    cursor:pointer;
+    font-weight:600;
+  }
+
+  /* Desktop: en haut */
+  @media (min-width: 601px) {
+    #adblock-banner { top: 12px; bottom: auto; }
+  }
+
+  /* Mobile: en bas pour ne pas cacher le header */
+  @media (max-width: 600px) {
+    #adblock-banner { bottom: 12px; top: auto; left: 8px; right: 8px; padding:10px; }
+    #adblock-banner .message { font-size: 0.95rem; }
+    #adblock-banner a.adblock-cta { padding:8px 12px; }
+  }
+</style>
+
+<div id="adblock-banner" role="dialog" aria-live="polite" aria-label="Suggestion d'installation d'AdBlock">
+  <div class="message" style="max-width:760px;">
+    <strong>Pour une expérience sans publicités, installez AdBlock avant de profiter des films.</strong>
+  </div>
+  <div class="adblock-actions">
+    <a class="adblock-cta" id="adblock-cta" href="https://getadblock.com" target="_blank" rel="noopener noreferrer">
+      Télécharger AdBlock
+    </a>
+   <button type="button" class="adblock-close" id="adblock-close" aria-label="Fermer la suggestion AdBlock"
+  onclick="(function(){try{localStorage.setItem('adblock_banner_closed_v2', JSON.stringify({ts:new Date().toISOString()}));}catch(e){} var b=document.getElementById('adblock-banner'); if(b) b.style.display='none'; return false;})()">
+  Fermer
+</button>
+
+  </div>
+</div>
+
+<script>
+(function () {
+  const STORAGE_KEY = 'adblock_banner_closed_v2';
+  const STORAGE_TTL_DAYS = 30;
+
+  // 1) Vérifier si on est sur la "page d'accueil" (racine ou index.html)
+  const pathname = window.location.pathname || '/';
+  const isHomepage = (pathname === '/' || pathname.endsWith('/index.html') || pathname === '');
+
+  // 2) Vérifier si le visiteur a déjà fermé la bannière récemment
+  function isClosedRecently() {
+    try {
+      const raw = localStorage.getItem(STORAGE_KEY);
+      if (!raw) return false;
+      const obj = JSON.parse(raw);
+      if (!obj || !obj.ts) return false;
+      const ageMs = Date.now() - new Date(obj.ts).getTime();
+      const ttlMs = STORAGE_TTL_DAYS * 24 * 60 * 60 * 1000;
+      return ageMs < ttlMs;
+    } catch (e) {
+      return false;
+    }
+  }
+
+  function saveClosed() {
+    try {
+      localStorage.setItem(STORAGE_KEY, JSON.stringify({ ts: new Date().toISOString() }));
+    } catch (e) {
+      // ignore (private mode)
+    }
+  }
+
+  // 3) Détection basique d'adblockers (technique de "bait")
+  // Crée un élément avec un nom fréquemment bloqué par les extensions (ads, ad, adsbox, pub, banner...)
+  function detectAdblock(timeout = 120) {
+    return new Promise((resolve) => {
+      try {
+        const bait = document.createElement('div');
+        bait.className = 'adsbox ad-unit ad-banner pub_300x250 ad-container';
+        // styles pour éviter que l'élément change la mise en page
+        bait.style.width = '1px';
+        bait.style.height = '1px';
+        bait.style.position = 'absolute';
+        bait.style.left = '-9999px';
+        document.body.appendChild(bait);
+
+        // Vérifier après un court délai (les bloqueurs cachent / suppriment rapidement)
+        setTimeout(() => {
+          let blocked = false;
+          try {
+            const cs = window.getComputedStyle(bait);
+            // si display none, visibility hidden, ou offsetHeight 0 -> probablement bloqué
+            if (!cs || cs.display === 'none' || cs.visibility === 'hidden') blocked = true;
+            if (bait.offsetParent === null && bait.offsetHeight === 0) blocked = true;
+            // certaines extensions retirent complètement l'élément
+            if (!document.body.contains(bait)) blocked = true;
+          } catch (e) {
+            blocked = false;
+          } finally {
+            try { bait.remove(); } catch (e) {}
+            resolve(blocked);
+          }
+        }, timeout);
+      } catch (e) {
+        resolve(false); // si erreur, on suppose pas d'adblock
+      }
+    });
+  }
+
+  // 4) Contrôle d'affichage : si on est sur l'accueil, si pas fermé, et si aucun adblock détecté -> afficher
+  (async function decideAndShow() {
+    if (!isHomepage) return;                 // seulement page d'accueil
+    if (isClosedRecently()) return;          // déjà fermé récemment
+
+    // attendre que body existe (au cas où script chargé tôt)
+    if (!document.body) {
+      await new Promise(r => {
+        const obs = new MutationObserver(() => {
+          if (document.body) { obs.disconnect(); r(); }
+        });
+        obs.observe(document.documentElement, { childList: true });
+      });
+    }
+
+    const adblockDetected = await detectAdblock();
+
+    // Si adblock détecté, on ne propose pas l'installation (il est déjà présent)
+    if (adblockDetected) return;
+
+    // Afficher la bannière
+    const banner = document.getElementById('adblock-banner');
+    if (banner) {
+      banner.style.display = 'flex';
+      // focus sur le bouton téléchargement pour accessibilité si souhaité
+      const cta = document.getElementById('adblock-cta');
+      if (cta) cta.setAttribute('tabindex', '0');
+
+      // Gestion fermeture
+      const closeBtn = document.getElementById('adblock-close');
+      if (closeBtn) {
+        closeBtn.addEventListener('click', () => {
+          banner.style.display = 'none';
+          saveClosed();
+        });
+      }
+
+      // Si l'utilisateur clique sur le lien "Télécharger", on considère la bannière fermée
+      if (cta) {
+        cta.addEventListener('click', () => {
+          try { saveClosed(); } catch (e) {}
+          // ouverture se fait par target="_blank"
+        });
+      }
+
+      // Fermer avec Echap
+      document.addEventListener('keydown', (e) => {
+        if (e.key === 'Escape' || e.key === 'Esc') {
+          if (banner && banner.style.display !== 'none') {
+            banner.style.display = 'none';
+            saveClosed();
+          }
+        }
+      }, { once: false });
+    }
+  })();
+})();
+</script>
+<!-- Fin : Bannière AdBlock -->
+
+
 </body>
 </html>
-
