--- a/index.html
+++ b/index.html
@@ -694,17 +694,50 @@
   <div class="message" style="max-width:760px;">
     <strong>Pour une expérience sans publicités, installez AdBlock avant de profiter des films.</strong>
   </div>
+
   <div class="adblock-actions">
-    <a class="adblock-cta" id="adblock-cta" href="https://getadblock.com" target="_blank" rel="noopener noreferrer">
+    <a class="adblock-cta" id="adblock-cta"
+       href="https://getadblock.com"
+       target="_blank"
+       rel="noopener noreferrer">
       Télécharger AdBlock
     </a>
-   <button type="button" class="adblock-close" id="adblock-close" aria-label="Fermer la suggestion AdBlock"
-  onclick="(function(){try{localStorage.setItem('adblock_banner_closed_v2', JSON.stringify({ts:new Date().toISOString()}));}catch(e){} var b=document.getElementById('adblock-banner'); if(b) b.style.display='none'; return false;})()">
-  Fermer
-</button>
 
+    <button type="button" class="adblock-close" id="adblock-close" aria-label="Fermer la suggestion AdBlock"
+      onclick="(function(){
+        try{
+          localStorage.setItem('adblock_banner_closed_v2',
+            JSON.stringify({ts:new Date().toISOString()}));
+        }catch(e){}
+        var b=document.getElementById('adblock-banner');
+        if(b) b.style.display='none';
+        return false;
+      })()">
+      Fermer
+    </button>
   </div>
 </div>
+
+<script>
+(function () {
+  // Détection simple du mobile
+  const ua = navigator.userAgent || navigator.vendor || window.opera;
+  const isIOS = /iPad|iPhone|iPod/.test(ua) && !window.MSStream;
+  const isAndroid = /android/i.test(ua);
+
+  const link = document.getElementById('adblock-cta');
+  if (!link) return;
+
+  if (isIOS) {
+    // Lien AdGuard/Adblock pour Safari iOS
+    link.href = 'https://apps.apple.com/app/adguard-content-blocker/id1047223162';
+  } else if (isAndroid) {
+    // Lien Play Store pour Android
+    link.href = 'https://play.google.com/store/apps/details?id=com.adguard.android.contentblocker';
+  }
+})();
+</script>
+
 
 <script>
 (function () {
