--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
     link.href = 'https://apps.apple.com/app/adguard-content-blocker/id1047223162';
   } else if (isAndroid) {
     // Lien Play Store pour Android
-    link.href = 'https://play.google.com/store/apps/details?id=com.adguard.android.contentblocker';
+    link.href = 'https://adguard.com/fr/cb-products.html?aid=28071&utm_campaign=other_product&utm_medium=chrome_dialog&utm_source=content_blocker';
   }
 })();
 </script>
